Fix dark mode, add change src-images

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,17 +22,7 @@
   --text-secondary: hsl(230, 17%, 14%);
   --toggle: hsl(230, 22%, 74%);
 
-  /* Dark Theme */
-  --bg-dark-blue: #1d2029;
-  --bg-very-dark-blue: #20222f;
-  --bg-dark-desaturated-blue: hsl(228, 28%, 20%);
-  --text-desaturated-blue: hsl(228, 34%, 66%);
-  --text-white: hsl(0, 0%, 100%);
-  --toggle: linear-gradient(
-    to right,
-    hsl(210, 78%, 56%) 0%,
-    hsl(146, 68%, 55%) 100%
-  );
+  
 
 }
 
@@ -100,21 +90,30 @@ h1 {
   border-radius: 0 0 20px 20px;
 }
 
-.header__total {
+.header-heading {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.header-heading__total {
   color: var(--text-primary);
   margin: 0.5em 0;
   font-weight: 600;
-  border-bottom: 1px solid var(--text-secondary);
+  border-bottom: 1px solid var(--text-primary);
   padding-bottom: 1.5em;
 }
 
 .dark-mode {
   display: flex;
   justify-content: space-between;
+  
   padding-top: 1em;
 }
 .dark-mode__title {
   color: var(--text-primary);
+  margin-top: 6px;
 }
 
 .dark-mode__checkbox {
@@ -127,24 +126,25 @@ h1 {
 }
 
 .dark-mode__switch {
-  height: 40px;
-  width: 80px;
+  height: 30px;
+  width: 65px;
   display: block;
-  border-radius: 20px;
+  border-radius: 30px;
   background: var(--toggle);
-  padding: 5px;
+  padding: 2.5px;
   cursor: pointer;
   user-select: none;
+  align-items: center;
 }
 
 .dark-mode__switch::before {
   content: "";
   display: block;
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
   background: var(--bg-primary-color);
-  transform: translateX(40px);
+  transform: translateX(32.5px);
   transition: 0.3s;
   will-change: transform;
 }
@@ -156,7 +156,7 @@ h1 {
     padding-bottom: 100px;
     border-radius: 0 0 20px 20px;
   }
-  .header__total {
+  .header-heading__total {
     border-bottom: none;
   }
 
@@ -164,6 +164,7 @@ h1 {
     display: grid;
     grid-template-columns: 1fr 200px;
   }
+
 }
 /* Top cards */
 .top-cards {
